--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Heatmap with 10 Points in Moscow</title>
+    <title>Heatmap with Grouped Points in Moscow</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="https://api-maps.yandex.ru/2.1/?apikey=79f8b6a1-0321-48e8-8787-51a22797dd29&lang=en_US" type="text/javascript"></script>
     <script src="https://yastatic.net/s3/mapsapi-jslibs/heatmap/0.0.1/heatmap.min.js" type="text/javascript"></script>
@@ -15,82 +15,60 @@
                 zoom: 10 // Увеличение для лучшего обзора
             });
 
-            // Данные для 10 точек
+            // Объекты
+            var objects = [
+                { coordinates: [55.7558, 37.6173] },
+                { coordinates: [55.7558, 37.6173] }, // 2 объекта
+                { coordinates: [55.7415, 37.6156] },
+                { coordinates: [55.7580, 37.6300] },
+                { coordinates: [55.7580, 37.6300] },
+                { coordinates: [55.7580, 37.6300] }, // 3 объекта
+                { coordinates: [55.7485, 37.6090] },
+                { coordinates: [55.7630, 37.6200] },
+                { coordinates: [55.7520, 37.6100] },
+                { coordinates: [55.7700, 37.6300] }
+            ];
+
+            // Группировка по координатам
+            var groups = {};
+            objects.forEach(obj => {
+                var key = obj.coordinates.join(','); //группа определяется по одинаковой широте
+                if (!groups[key]) {
+                    groups[key] = 1;
+                } else {
+                    groups[key]++;
+                }
+            });
+
+            // Создание данных для тепловой карты
             var data = {
                 type: 'FeatureCollection',
-                features: [
-                    {
-                        id: 'id1',
-                        type: 'Feature',
-                        geometry: { type: 'Point', coordinates: [55.7558, 37.6173] },
-                        properties: { weight: 10 }
-                    },
-                    {
-                        id: 'id2',
-                        type: 'Feature',
-                        geometry: { type: 'Point', coordinates: [55.7415, 37.6156] },
-                        properties: { weight: 20 }
-                    },
-                    {
-                        id: 'id3',
-                        type: 'Feature',
-                        geometry: { type: 'Point', coordinates: [55.7580, 37.6300] },
-                        properties: { weight: 40 }
-                    },
-                    {
-                        id: 'id4',
-                        type: 'Feature',
-                        geometry: { type: 'Point', coordinates: [55.7485, 37.6090] },
-                        properties: { weight: 60 }
-                    },
-                    {
-                        id: 'id5',
-                        type: 'Feature',
-                        geometry: { type: 'Point', coordinates: [55.7630, 37.6200] },
-                        properties: { weight: 80 }
-                    },
-                    {
-                        id: 'id6',
-                        type: 'Feature',
-                        geometry: { type: 'Point', coordinates: [55.7520, 37.6100] },
-                        properties: { weight: 15 }
-                    },
-                    {
-                        id: 'id7',
-                        type: 'Feature',
-                        geometry: { type: 'Point', coordinates: [55.7700, 37.6300] },
-                        properties: { weight: 40 }
-                    },
-                    {
-                        id: 'id8',
-                        type: 'Feature',
-                        geometry: { type: 'Point', coordinates: [55.7400, 37.6200] },
-                        properties: { weight: 45 }
-                    },
-                    {
-                        id: 'id9',
-                        type: 'Feature',
-                        geometry: { type: 'Point', coordinates: [55.7600, 37.6100] },
-                        properties: { weight: 100 }
-                    },
-                    {
-                        id: 'id10',
-                        type: 'Feature',
-                        geometry: { type: 'Point', coordinates: [55.7500, 37.6200] },
-                        properties: { weight: 100 }
-                    }
-                ]
+                features: []
             };
-            // Нормализация весов (опционально)
-            var maxWeight = 100;
+            for (var key in groups) {
+                var count = groups[key];
+                var weight = Math.min(count, 3); // 1, 2 или 3
+                var coordinates = key.split(',').map(Number);
+                data.features.push({
+                    type: 'Feature',
+                    geometry: { type: 'Point', coordinates: coordinates },
+                    properties: { weight: weight }
+                });
+            }
+
+            // Нормализация весов
+            var maxWeight = 3;
             data.features.forEach(feature => {
                 feature.properties.weight = feature.properties.weight / maxWeight;
             });
+
+            // Градиент: зелёный (1), жёлтый (2), красный (3+)
             var gradient = {
-                0.0: 'rgba(0, 0, 255, 0.7)',   // Синий
-                0.5: 'rgba(0, 255, 0, 0.7)',   // Зелёный
+                0.0: 'rgba(0, 255, 0, 0.7)',   // Зелёный
+                0.5: 'rgba(255, 255, 0, 0.7)', // Жёлтый
                 1.0: 'rgba(255, 0, 0, 0.7)'    // Красный
             };
+
             // Создание тепловой карты
             ymaps.modules.require(['Heatmap'], function (Heatmap) {
                 var heatmap = new Heatmap(data, {
@@ -102,7 +80,6 @@
         }
     </script>
 </head>
-
 <body>
 <div id="map" style="width: 100vw; height: 100vh"></div>
 </body>
