--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 { coordinates: [55.7558, 37.6139], name: "Здание 7", repairCost: "800 000 руб." },
                 { coordinates: [55.7415, 37.6156], name: "Здание 8", repairCost: "150 000 руб." },
                 { coordinates: [55.7580, 37.6300], name: "Здание 9", repairCost: "200 000 руб." },
-                { coordinates: [55.7580, 37.6301], name: "Здание 10", repairCost: "180 000 руб." }
+                { coordinates: [55.7580, 37.6301], name: "Здание 10", repairCost: "180 000 руб." },
+                { coordinates: [55.7480, 37.6301], name: "Здание 11", repairCost: "180 000 руб." },
+                { coordinates: [55.7480, 37.6303], name: "Здание 12", repairCost: "15 000 руб." },
             ];
 
             // Группировка для тепловой карты
@@ -65,7 +67,7 @@
             var gradient = {
                 0.0: 'rgba(0, 255, 0, 0.7)',   // Зелёный
                 0.3: 'rgba(255, 255, 0, 0.7)', // Жёлтый
-                1.0: 'rgba(255, 0, 0, 1)'    // Красный
+                0.6: 'rgba(255, 0, 0, 1)'    // Красный
             };
 
             // Создание тепловой карты
