--- a/index.html
+++ b/index.html
@@ -5,95 +5,60 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="https://api-maps.yandex.ru/2.1/?apikey=79f8b6a1-0321-48e8-8787-51a22797dd29&lang=ru_RU" type="text/javascript"></script>
     <script src="https://yastatic.net/s3/mapsapi-jslibs/heatmap/0.0.1/heatmap.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="style/reset.css">
+    <link rel="stylesheet" href="style/style.css">
+    <script src="app.js" type="text/javascript">
 
-    <script type="text/javascript">
-        ymaps.ready(init);
-        function init() {
-            var myMap = new ymaps.Map("map", {
-                center: [55.76, 37.64], // Центр карты (Москва)
-                zoom: 10
-            });
-
-            // Данные об аварийных зданиях
-            var buildings = [
-                { coordinates: [55.7558, 37.6173], name: "Здание 1", repairCost: "100 000 руб." },
-                { coordinates: [55.7558, 37.6179], name: "Здание 2", repairCost: "120 000 руб." },
-                { coordinates: [55.7558, 37.6154], name: "Здание 3", repairCost: "400 000 руб." },
-                { coordinates: [55.7558, 37.6136], name: "Здание 4", repairCost: "800 000 руб." },
-                { coordinates: [55.7558, 37.6137], name: "Здание 5", repairCost: "800 000 руб." },
-                { coordinates: [55.7558, 37.6138], name: "Здание 6", repairCost: "800 000 руб." },
-                { coordinates: [55.7558, 37.6139], name: "Здание 7", repairCost: "800 000 руб." },
-                { coordinates: [55.7415, 37.6156], name: "Здание 8", repairCost: "150 000 руб." },
-                { coordinates: [55.7580, 37.6300], name: "Здание 9", repairCost: "200 000 руб." },
-                { coordinates: [55.7580, 37.6301], name: "Здание 10", repairCost: "180 000 руб." },
-                { coordinates: [55.7480, 37.6301], name: "Здание 11", repairCost: "180 000 руб." },
-                { coordinates: [55.7480, 37.6303], name: "Здание 12", repairCost: "15 000 руб." },
-            ];
-
-            // Группировка для тепловой карты
-            var groups = {};
-            buildings.forEach(building => {
-                var key = building.coordinates.join(',');
-                if (!groups[key]) {
-                    groups[key] = 1;
-                } else {
-                    groups[key]++;
-                }
-            });
-
-            // Данные для тепловой карты
-            var data = {
-                type: 'FeatureCollection',
-                features: []
-            };
-            for (var key in groups) {
-                var count = groups[key];
-                var weight = Math.min(count, 3); // Ограничиваем вес до 3
-                var coordinates = key.split(',').map(Number);
-                data.features.push({
-                    type: 'Feature',
-                    geometry: { type: 'Point', coordinates: coordinates },
-                    properties: { weight: weight }
-                });
-            }
-
-            // Нормализация весов
-            var maxWeight = 3;
-            data.features.forEach(feature => {
-                feature.properties.weight = feature.properties.weight / maxWeight;
-            });
-
-            // Градиент для тепловой карты
-            var gradient = {
-                0.0: 'rgba(0, 255, 0, 0.7)',   // Зелёный
-                0.3: 'rgba(255, 255, 0, 0.7)', // Жёлтый
-                0.6: 'rgba(255, 0, 0, 1)'    // Красный
-            };
-
-            // Создание тепловой карты
-            ymaps.modules.require(['Heatmap'], function (Heatmap) {
-                var heatmap = new Heatmap(data, {
-                    gradient: gradient,
-                    dissipating: false
-                });
-                heatmap.setMap(myMap);
-                heatmap.options.set('radius', 50); // Радиус тепловых зон
-            });
-
-            // Добавление маркеров для каждого здания
-            buildings.forEach(building => {
-                var placemark = new ymaps.Placemark(building.coordinates, {
-                    balloonContent: `<strong>${building.name}</strong><br>Стоимость ремонта: ${building.repairCost}`
-                }, {
-                    preset: 'islands#icon', // Стандартный значок
-                    iconColor: '#0095b6'    // Цвет значка
-                });
-                myMap.geoObjects.add(placemark);
-            });
-        }
     </script>
 </head>
 <body>
-<div id="map" style="width: 100vw; height: 100vh"></div>
+<div id="map">
+    <!-- Кастомные элементы управления -->
+    <aside class="custom-controls">
+        <!-- Левый блок -->
+        <div class="left-panel">
+            <div class="panel-item">
+                <img src="assets/FRT_logo.svg" alt="Логотип компании Фонд Развития Территорий">
+            </div>
+            <div class="panel-item">
+                <input type="checkbox" class="custom-checkbox" checked>
+                <img src="assets/home.svg" alt="Иконка дома">
+                <span>Дома</span>
+                <img src="assets/filter.svg" alt="Иконка фильтра">
+                <img src="assets/more_vert.svg" alt="Иконка трех точек">
+            </div>
+            <div class="panel-item">
+                <input type="checkbox" class="custom-checkbox" checked>
+                <img src="assets/nest_heat.svg" alt="Иконка тепловой карты аварийных домов">
+                <span>Тепловая карта аварийных домов</span>
+                <img src="assets/filter.svg" alt="Иконка фильтра">
+                <img src="assets/more_vert.svg" alt="Иконка трех точек">
+            </div>
+            <div class="panel-item">
+                <input type="checkbox" class="custom-checkbox">
+                <img src="assets/domain_add.svg" alt="Иконка проектов КРТ">
+                <span>Проекты КРТ</span>
+                <img src="assets/filter.svg" alt="Иконка фильтра">
+                <img src="assets/more_vert.svg" alt="Иконка трех точек">
+            </div>
+        </div>
+
+        <!-- Правый блок -->
+        <div class="right-panel">
+            <!-- Кнопка скрытия/открытия -->
+            <button class="toggle-btn"><img  class="img-chevron" src="assets/chevron_left.svg" alt="Стрелка для закрытия и открытия левого меню"></button>
+
+            <!-- Группа кнопок -->
+            <div class="button-group">
+                <button class="map-button">+</button>
+                <button class="map-button"><img src="assets/my_location.svg" alt=""></button>
+                <button class="map-button">-</button>
+            </div>
+
+            <!-- Отдельная кнопка -->
+            <button class="map-button"><img src="assets/near_me.svg"></button>
+        </div>
+    </aside>
+</div>
 </body>
 </html>
