Левая панель готова

--- a/index.html
+++ b/index.html
@@ -18,28 +18,40 @@
         <!-- Левый блок -->
         <div class="left-panel">
             <div class="panel-item">
-                <img src="assets/FRT_logo.svg" alt="Логотип компании Фонд Развития Территорий">
+                <img src="assets/FRT_logo.svg" alt="Логотип компании Фонд Развития Территорий" style="padding-bottom: 5px">
             </div>
             <div class="panel-item">
-                <input type="checkbox" class="custom-checkbox" checked>
-                <img src="assets/home.svg" alt="Иконка дома">
-                <span>Дома</span>
-                <img src="assets/filter.svg" alt="Иконка фильтра">
-                <img src="assets/more_vert.svg" alt="Иконка трех точек">
+                <div class="panel-item-block">
+                    <input type="checkbox" class="custom-checkbox" checked>
+                    <img src="assets/home.svg" alt="Иконка дома">
+                    <span class="panel-item-block-name">Дома</span>
+                </div>
+                <div class="panel-item-block">
+                    <img src="assets/filter.svg" alt="Иконка фильтра">
+                    <img src="assets/more_vert.svg" alt="Иконка трех точек">
+                </div>
             </div>
             <div class="panel-item">
-                <input type="checkbox" class="custom-checkbox" checked>
-                <img src="assets/nest_heat.svg" alt="Иконка тепловой карты аварийных домов">
-                <span>Тепловая карта аварийных домов</span>
-                <img src="assets/filter.svg" alt="Иконка фильтра">
-                <img src="assets/more_vert.svg" alt="Иконка трех точек">
+                <div class="panel-item-block">
+                    <input type="checkbox" class="custom-checkbox" checked>
+                    <img src="assets/nest_heat.svg" alt="Иконка тепловой карты аварийных домов">
+                    <span class="panel-item-block-name">Тепловая карта аварийных домов</span>
+                </div>
+                <div class="panel-item-block">
+                    <img src="assets/filter.svg" alt="Иконка фильтра">
+                    <img src="assets/more_vert.svg" alt="Иконка трех точек">
+                </div>
             </div>
             <div class="panel-item">
-                <input type="checkbox" class="custom-checkbox">
-                <img src="assets/domain_add.svg" alt="Иконка проектов КРТ">
-                <span>Проекты КРТ</span>
-                <img src="assets/filter.svg" alt="Иконка фильтра">
-                <img src="assets/more_vert.svg" alt="Иконка трех точек">
+                <div class="panel-item-block">
+                    <input type="checkbox" class="custom-checkbox">
+                    <img src="assets/domain_add.svg" alt="Иконка проектов КРТ">
+                    <span class="panel-item-block-name">Проекты КРТ</span>
+                </div>
+                <div class="panel-item-block">
+                    <img src="assets/filter.svg" alt="Иконка фильтра">
+                    <img src="assets/more_vert.svg" alt="Иконка трех точек">
+                </div>
             </div>
         </div>
 
