--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 <button class="toggle-btn"><img  class="img-chevron" src="assets/chevron_left.svg" alt="Стрелка для закрытия и открытия левого меню"></button>
                 <!-- Группа кнопок -->
                 <div class="button-group">
-                    <button class="map-button">+</button>
-                    <button class="map-button"><img src="assets/my_location.svg" alt=""></button>
-                    <button class="map-button">-</button>
+                    <button class="map-button" id="map-button-zoom-in">+</button>
+                    <button class="map-button" id="map-button-geolocation-control"><img src="assets/my_location.svg" alt=""></button>
+                    <button class="map-button" id="map-button-zoom-out">-</button>
                 </div>
                 <!-- Отдельная кнопка -->
                 <button class="map-button"><img src="assets/near_me.svg"></button>
