Добавил функционал кнопкам увеличения и уменьшения масштаба

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <button class="map-button"><img src="assets/menu_icon.svg" alt="Иконка меню"></button>
         </div>
         <div class="custom-controls-group-second">
-            <button class="map-button"><img src="assets/layers_icon.svg" alt="Иконка слоев"></button>
+            <button class="map-button" id="map-button-layers"><img src="assets/layers_icon.svg" alt="Иконка слоев"></button>
             <button class="map-button"><img src="assets/more_horiz.svg" alt="Иконка трех горизонтальных точек"></button>
             <button class="map-button"><img src="assets/download_icon.svg" alt="Иконка загрузки"></button>
             <button class="map-button"><img src="assets/palette_icon.svg" alt="Иконка палитры"></button>
