Полностью реализовал функционал зума, также реализовал функционал определения местоположения

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
                 <!-- Группа кнопок -->
                 <div class="button-group">
                     <button class="map-button" id="map-button-zoom-in">+</button>
-                    <button class="map-button" id="map-button-geolocation-control"><img src="assets/my_location.svg" alt=""></button>
+                    <button class="map-button" id="map-button-zoom-normalize"><img src="assets/my_location.svg" alt=""></button>
                     <button class="map-button" id="map-button-zoom-out">-</button>
                 </div>
                 <!-- Отдельная кнопка -->
-                <button class="map-button"><img src="assets/near_me.svg"></button>
+                <button class="map-button" id="map-button-geolocation-control"><img src="assets/near_me.svg"></button>
             </div>
         </div>
     </aside>
