Реализовал функционал печати ( тестовое )

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <button class="map-button"><img src="assets/more_horiz.svg" alt="Иконка трех горизонтальных точек"></button>
             <button class="map-button"><img src="assets/download_icon.svg" alt="Иконка загрузки"></button>
             <button class="map-button"><img src="assets/palette_icon.svg" alt="Иконка палитры"></button>
-            <button class="map-button"><img src="assets/print_icon.svg" alt="Иконка принтера"></button>
+            <button class="map-button" id="map-button-print"><img src="assets/print_icon.svg" alt="Иконка принтера"></button>
             <button class="map-button"><img src="assets/link_icon.svg" alt="Иконка ссылки"></button>
         </div>
         <div class="custom-controls-group-third">
